first commit to take contact to openEMS develoü