@@ -7,7 +7,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.osgi.service.event.Event;
 import org.osgi.service.event.EventAdmin;
@@ -22,8 +21,9 @@ import io.openems.backend.common.metadata.Mailer;
 import io.openems.backend.common.test.DummyMetadata;
 
 public class Dummy {
+
 	public static class MailerImpl implements Mailer {
-		public Map<ZonedDateTime, String> sentMails = new HashMap<>();
+		public final Map<ZonedDateTime, String> sentMails = new HashMap<>();
 
 		@Override
 		public void sendMail(ZonedDateTime sendAt, String template, JsonElement params) {
@@ -68,8 +68,8 @@ public class Dummy {
 	}
 
 	public static class MetadataImpl extends SimpleMetadataImpl {
-		public List<Edge> edges;
-		public Map<String, List<AlertingSetting>> settings;
+		private List<Edge> edges;
+		private Map<String, List<AlertingSetting>> settings;
 
 		/**
 		 * Initialize Metadata with test data.
@@ -87,6 +87,10 @@ public class Dummy {
 			return true;
 		}
 
+		public Map<String, List<AlertingSetting>> getSettings() {
+			return this.settings;
+		}
+
 		@Override
 		public Optional<Edge> getEdge(String edgeId) {
 			return this.edges.stream().filter(e -> e.getId() == edgeId).findFirst();
@@ -94,7 +98,7 @@ public class Dummy {
 
 		@Override
 		public Collection<Edge> getAllOfflineEdges() {
-			return this.edges.stream().filter(Edge::isOffline).collect(Collectors.toList());
+			return this.edges.stream().filter(Edge::isOffline).toList();
 		}
 
 		@Override
@@ -104,7 +108,7 @@ public class Dummy {
 	}
 
 	public static class EventAdminImpl implements EventAdmin {
-		public List<Event> lastEvents = new ArrayList<>();
+		private List<Event> lastEvents = new ArrayList<>();
 
 		public EventAdminImpl() {
 
